--- a/_includes/twitter_plug.html
+++ b/_includes/twitter_plug.html
@@ -1,5 +1,4 @@
-If you have any questions or comments, please post them below. If
-you liked this post, you can
+If you liked this post, you can
 <a href="https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&text={{ page.title }}&via=sanlaxman"
    target="_blank">
   share it with your followers</a>
