--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     <div class="container content">
       <div class="masthead">
         <h3 class="masthead-title">
+          <img src="http://www.gravatar.com/avatar/6590ac9468a2125fadebeaaf53416e18" alt="" />
           <a href="/" title="Home">{{ site.title }}</a>
 
           {% for page in site.pages_list %}
